<resources>
    <string name="app_name">Crime</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crime_title">犯罪事项</string>
    <string name="crime_title_label">犯罪标题</string>
    <string name="crime_details">犯罪细节</string>
    <string name="crime_solve">问题是否解决？</string>
    <string name="date_pick">设置犯罪日期</string>
    <string name="time_pick">设置犯罪时间</string>
    <string name="new_crime">增加新记录</string>
    <string name="show_subtitle">显示详细</string>
    <string name="hide_subtitle">隐藏详情</string>
    <string name="subtitle">如果你看到了什么，请说出来</string>
    <string name="delete_crime">删除</string>
    <string name="crime_suspect_text">选取犯罪分子</string>
    <string name="crime_report_text">发送犯罪报告</string>
    <string name="crime_report">%1$s! 这项犯罪被发现于 %2$s. %3$s,%4$s</string>
    <string name="crime_report_susupect">犯罪嫌疑人是 %s.</string>
</resources>
